# msc-thesis-ie

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  README.md  Snakefile  TODOS.md  gis.ipynb  main.ipynb  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  dashboard.yml
cdm/: aggregation.py  constants.py  environmental.py  figures.py  figures_sensitivity.py  geometric.py  parameters.py  readers.py  sensitivity_analysis.py  thermodynamic.py  time_series.py
config/: smoke.yaml  sources.yaml
dashboard/: .gitignore  README.md  biome.json  index.html  lefthook.yml  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wrangler.jsonc
dashboard/e2e/: a11y.spec.ts
dashboard/public/data/: cooling_by_buurt.geojson  cooling_frames.json  scenarios.json  temporal.json
dashboard/scripts/: build_choropleth.py  build_hourly_frames.py  build_og.mjs  build_scenarios.py  build_temporal.py
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/: Act.tsx  Fork.tsx  HourlyMap.tsx  HowItWorks.tsx  LcaView.tsx  Legend.tsx  MapView.tsx  NearTerm.tsx  PathSwitch.tsx  Payoff.tsx  ScenarioPicker.tsx  Segmented.tsx  Summary.tsx  TemporalView.tsx  TodayHero.tsx  ValueStrip.tsx  YearCarpet.tsx
dashboard/src/lib/: basemap.test.ts  basemap.ts  choropleth.test.ts  choropleth.ts  data.test.ts  data.ts  format.test.ts  format.ts  frames.test.ts  frames.ts  geo.test.ts  geo.ts  hooks.test.tsx  palette.test.ts  palette.ts  scenarioMeta.test.ts  scenarioMeta.ts  transform.test.ts  transform.ts  types.ts  useInView.ts  useScrollSpy.ts  useTheme.ts
dashboard/src/test/: setup.ts
data/: background_research_environmental_impacts_of_cooling.xlsx
data/input/parameters/: multidirectional_solar_radiation_fractions.csv  parameters.toml  parameters_building_type.csv  parameters_cooling_technology.csv  parameters_energy_class.csv  presence_load_factors.csv  raw_weather_data_2018_2022_HvH.csv
data/input/parameters/parameters_2030/: parameters_building_type.csv  parameters_cooling_technology.csv  parameters_global.csv
data/input/parameters/parameters_2050_H/: parameters_building_type.csv  parameters_cooling_technology.csv  parameters_energy_class.csv  parameters_global.csv
data/input/parameters/parameters_2050_L/: parameters_building_type.csv  parameters_cooling_technology.csv  parameters_energy_class.csv  parameters_global.csv
data/input/parameters/parameters_2050_M/: parameters_building_type.csv  parameters_cooling_technology.csv  parameters_energy_class.csv  parameters_global.csv
data/input/parameters/parameters_SQ/: parameters_building_type.csv  parameters_cooling_technology.csv  parameters_energy_class.csv  parameters_global.csv
data/output/: CDM_results_2030_full.csv  CDM_results_2050_H_full.csv  CDM_results_2050_L_full.csv  CDM_results_2050_M_full.csv  CDM_results_SQ_full.csv  cooling_mix_elasticities_table.csv
docs/: index.md  make_overview_figure.py
functions/: aggregation.py  constants.py  data_handling.py  environmental.py  figures.py  geometric.py  parameters.py  sensitivity_analysis.py  thermodynamic.py  time_series.py
scripts/: __init__.py  dot_to_simple_svg.py  make_paper_figures.py  paper_numbers.py  run_cdm_stage.py  run_cooling_mix_sensitivity.py  run_sensitivity.py  subsample_buildings.py
scripts/gis/: __init__.py  discover_pdok_3d_height_tiles.py  download_manifest_files.py  ensure_energy_labels.py  fetch_city_boundary.py  fetch_ogc_features.py  fetch_uhi_raster.py  fetch_weather.py  pdok_http.py  prepare_pdok_model_geodata.py
tests/: __init__.py  conftest.py  test_data_handling.py  test_environmental.py  test_figures.py  test_geometric.py  test_integration.py  test_run_cdm_stage.py  test_run_sensitivity.py  test_sensitivity_analysis.py  test_subsample.py  test_thermodynamic.py  test_time_series.py
workflow/envs/: cooling-demand.yml
